Switched device template to Lumia

--- a/Shane.Church.Web.v2015/wwwroot/index.html
+++ b/Shane.Church.Web.v2015/wwwroot/index.html
@@ -22,7 +22,7 @@
 	<link href="css/jquery.fancybox.css" rel="stylesheet">
 	<link href="css/flickity.css" rel="stylesheet">
 	<link href="css/animate.css" rel="stylesheet">
-	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
 	<link href="css/styles.css" rel="stylesheet">
 	<link href="css/queries.css" rel="stylesheet">
@@ -324,7 +324,7 @@
 			<div class="row">
 				<div class="col-md-5">
 					<h1 class="footer-logo">
-						<img src="img/SCLogo-purple-42x31.png" alt="">
+						<img src="img/SCLogo-purple.png" alt="">
 					</h1>
 					<p>© Shane Church 2015
 				</div>
