Added waypoint directive

--- a/Shane.Church.Web.v2015/wwwroot/app/home/home.html
+++ b/Shane.Church.Web.v2015/wwwroot/app/home/home.html
@@ -1,4 +1,4 @@
-﻿<header>
+﻿<header waypoint ng-attr-waypoint-classes="animated fadeInLeft" ng-attr-waypoint-offset="75%">
 	<section class="hero">
 		<div class="texture-overlay"></div>
 		<div class="container">
@@ -25,7 +25,7 @@
 			<div class="row hero-content">
 				<div class="col-md-12">
 					<h1 class="animated fadeInDown">Father, Software Developer, Rockies Fan</h1>
-					<a href="/Blog" class="primary-btn animated fadeInUp">Blog</a> <a href="#about" class="secondary-btn animated fadeInUp">Learn more <i class="fa fa-arrow-down"></i></a>
+					<a href="/Blog" class="primary-btn animated fadeInUp">Blog</a> <a href="#about" class="primary-btn animated fadeInUp">Learn more <i class="fa fa-arrow-down"></i></a>
 				</div>
 			</div>
 		</div>
