--- a/Shane.Church.Web.v2015/wwwroot/index.html
+++ b/Shane.Church.Web.v2015/wwwroot/index.html
@@ -68,10 +68,6 @@
 			</div>
 		</div>
 	</footer>
-	<script src="lib/angular/angular.js"></script>
-	<script src="lib/angular-route/angular-route.js"></script>
-	<script src="js/app.js"></script>
-	<script src="app/home/home.js"></script>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="js/min/toucheffects-min.js"></script>
 	<script src="lib/jquery/jquery.js"></script>
@@ -81,6 +77,10 @@
 	<script src="js/retina.js"></script>
 	<script src="js/waypoints.min.js"></script>
 	<script src="lib/bootstrap/bootstrap.js"></script>
-	<script src="js/scripts.js"></script>
-</body>
+	<!--<script src="js/scripts.js"></script>-->
+	<script src="lib/angular/angular.js"></script>
+	<script src="lib/angular-route/angular-route.js"></script>
+	<script src="js/app.js"></script>
+	<script src="app/home/home.js"></script>
+	<script src="app/shared/directives/waypoint.js"></script></body>
 </html>
