--- a/Shane.Church.Web.v2015/wwwroot/index.html
+++ b/Shane.Church.Web.v2015/wwwroot/index.html
@@ -80,7 +80,11 @@
 	<!--<script src="js/scripts.js"></script>-->
 	<script src="lib/angular/angular.js"></script>
 	<script src="lib/angular-route/angular-route.js"></script>
+	<script src="lib/ngSmoothScroll/angular-smooth-scroll.js"></script>
 	<script src="js/app.js"></script>
+	<script src="app/shared/directives/waypoint.js"></script>
+	<script src="app/shared/directives/flickity.js"></script>
+	<script src="app/shared/directives/fancybox.js"></script>
 	<script src="app/home/home.js"></script>
-	<script src="app/shared/directives/waypoint.js"></script></body>
+	</body>
 </html>
