--- a/Shane.Church.Web.v2015/wwwroot/app/home/home.html
+++ b/Shane.Church.Web.v2015/wwwroot/app/home/home.html
@@ -43,22 +43,13 @@
 				</div>
 			</div>
 			<div class="col-md-8 nopadding">
-				<div class="blog-slider">
-					<ul class="slides" id="blogSlider" flickity="{{ { 'cellAlign': 'left', 'contain': true, 'prevNextButtons': false } }}">
-						<li>
-							<h1>The Fore-front of Design &amp; Technology</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-							<p><a href="#features" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
-						</li>
-						<li>
-							<h1>Multi-Purpose User Centric Design</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-							<p><a href="http://tympanus.net/codrops/?p=22554" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
-						</li>
-						<li>
-							<h1>Made with Love, Released for Free</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-							<p><a href="http://tympanus.net/codrops/?p=22554" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
+				<div class="features-slider">
+					<ul class="slides" flickity="{{ { 'cellAlign': 'left', 'contain': true, 'prevNextButtons': false } }}">
+						<li ng-repeat="entry in blogEntries">
+							<h3>{{ entry.Title }}</h3>
+							<h4>{{ entry.EntryDate | date : 'MMMM d, yyyy h:mm a' }}</h4>
+							<p>{{ entry.Entry }}</p>
+							<p><a href ng-click="value = entry.Id" class="arrow-btn">Read more <i class="fa fa-long-arrow-right"></i></a></p>
 						</li>
 					</ul>
 				</div>
