--- a/Shane.Church.Web.v2015/wwwroot/app/home/home.html
+++ b/Shane.Church.Web.v2015/wwwroot/app/home/home.html
@@ -256,6 +256,58 @@
 						</figcaption>
 					</figure>
 				</li>
+				<li>
+					<figure>
+						<img src="img/07-screenshot.jpg" alt="Screenshot 01">
+						<figcaption>
+							<div class="caption-content">
+								<a href="img/large/07.jpg" class="single_image" fancybox="{{ { padding: 4 } }}">
+									<i class="fa fa-search"></i><br>
+									<p>Made with Love</p>
+								</a>
+							</div>
+						</figcaption>
+					</figure>
+				</li>
+				<li>
+					<figure>
+						<img src="img/08-screenshot.jpg" alt="Screenshot 01">
+						<figcaption>
+							<div class="caption-content">
+								<a href="img/large/08.jpg" class="single_image" fancybox="{{ { padding: 4 } }}">
+									<i class="fa fa-search"></i><br>
+									<p>In Sydney, Australia</p>
+								</a>
+							</div>
+						</figcaption>
+					</figure>
+				</li>
+				<li>
+					<figure>
+						<img src="img/07-screenshot.jpg" alt="Screenshot 01">
+						<figcaption>
+							<div class="caption-content">
+								<a href="img/large/07.jpg" class="single_image" fancybox="{{ { padding: 4 } }}">
+									<i class="fa fa-search"></i><br>
+									<p>Made with Love</p>
+								</a>
+							</div>
+						</figcaption>
+					</figure>
+				</li>
+				<li>
+					<figure>
+						<img src="img/08-screenshot.jpg" alt="Screenshot 01">
+						<figcaption>
+							<div class="caption-content">
+								<a href="img/large/08.jpg" class="single_image" fancybox="{{ { padding: 4 } }}">
+									<i class="fa fa-search"></i><br>
+									<p>In Sydney, Australia</p>
+								</a>
+							</div>
+						</figcaption>
+					</figure>
+				</li>
 			</ul>
 		</div>
 	</div>
