--- a/Shane.Church.Web.v2015/wwwroot/template.html
+++ b/Shane.Church.Web.v2015/wwwroot/template.html
@@ -69,7 +69,7 @@
 		</div>
 	</footer>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="js/toucheffects.js"></script>
+	<script src="js/min/toucheffects-min.js"></script>
 	<script src="lib/jquery/jquery.js"></script>
 	<script src="js/flickity.pkgd.min.js"></script>
 	<script src="js/jquery.fancybox.pack.js"></script>
@@ -82,11 +82,10 @@
 	<script src="lib/angular-route/angular-route.js"></script>
 	<script src="lib/angular-resource/angular-resource.js"></script>
 	<script src="lib/ngSmoothScroll/angular-smooth-scroll.js"></script>
-	<script src="app/app.js"></script>
+	<script src="js/app.js"></script>
 	<script src="app/shared/directives/waypoint.js"></script>
 	<script src="app/shared/directives/flickity.js"></script>
 	<script src="app/shared/directives/fancybox.js"></script>
-	<script src="app/shared/directives/photo-item.js"></script>
 	<script src="app/blog/blogService.js"></script>
 	<script src="app/home/home.js"></script>
 	</body>
