Adding photos to home page

--- a/Shane.Church.Web.v2015/wwwroot/app/shared/directives/photo-item.html
+++ b/Shane.Church.Web.v2015/wwwroot/app/shared/directives/photo-item.html
@@ -1,10 +1,10 @@
-﻿<figure>
-	<img src="{{ photo.small_image }}" alt="{{ photo.caption }}">
+﻿<figure ng-transclude>
+	<img src="{{ photoData.small_image }}" alt="{{ photoData.caption }}">
 	<figcaption>
 		<div class="caption-content">
-			<a href="{{ photo.large_image }}" class="single_image" fancybox="{{ { padding: 4 } }}">
+			<a href="{{ photoData.large_image }}" class="single_image" fancybox="{{ { padding: 4 } }}">
 				<i class="fa fa-search"></i><br>
-				<p>{{ photo.caption }}</p>
+				<p>{{ photoData.caption }}</p>
 			</a>
 		</div>
 	</figcaption>
