--- a/Shane.Church.Web.v2015/wwwroot/index.html
+++ b/Shane.Church.Web.v2015/wwwroot/index.html
@@ -88,6 +88,7 @@
 	<script src="app/shared/directives/fancybox.js"></script>
 	<script src="app/shared/directives/photo-item.js"></script>
 	<script src="app/blog/blogService.js"></script>
+	<script src="app/photo//photoService.js"></script>
 	<script src="app/home/home.js"></script>
 	</body>
 </html>
